...
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:text="@string/number_1"
                android:textSize="18sp"/>

            <Button
                android:id="@+id/unlockKey2"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@id/unlockKey1"
                android:text="@string/number_2"
...
                android:layout_height="50dp"
                android:layout_below="@id/unlockKey1"
                android:text="@string/number_4"
                android:textSize="18sp"/>

            <Button
                android:id="@+id/unlockKey5"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignBaseline="@id/unlockKey4"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@id/unlockKey4"
...
                android:layout_height="50dp"
                android:layout_below="@id/unlockKey4"
                android:text="@string/number_7"
                android:textSize="18sp"/>

            <Button
                android:id="@+id/unlockKey8"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignBaseline="@id/unlockKey7"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@id/unlockKey4"
...
                android:layout_toRightOf="@id/unlockKey5"
                android:text="@string/number_9"
                android:textSize="18sp"/>

            <!-- fourth row -->
            <Button
                android:id="@+id/unlockKey0"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_below="@id/unlockKey7"
                android:layout_centerHorizontal="true"
                android:text="@string/number_0"
...
