...
        android:layout_below="@id/horizontalLine">

        <RadioGroup
            android:id="@+id/wizardUnlockChoiceRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/radioPinUnlock"
            android:padding="16dp">

            <RadioButton
                android:id="@+id/radioPassphraseUnlock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                android:layout_marginTop="24dp"
                android:drawablePadding="8dp"
                android:drawableRight="@drawable/pin_option_black"
                android:text="@string/pin_unlock"/>

            <RadioButton
                android:id="@+id/radioPatternUnlock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:drawablePadding="8dp"
                android:drawableRight="@drawable/pattern_option"
                android:text="@string/pattern_unlock"/>

            <RadioButton
                android:id="@+id/radioNFCUnlock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:drawablePadding="8dp"
                android:drawableRight="@drawable/nfc_option"
                android:text="@string/nfc_unlock"/>
...
