...
                android:layout_marginBottom="2dp"
                android:text="@string/label_name"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?attr/colorTertiaryText"/>

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

...
                android:layout_marginBottom="2dp"
                android:text="@string/label_email"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?attr/colorTertiaryText"/>

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

...
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:background="?android:attr/listDivider"/>

                <TextView
                    android:id="@+id/create_key_edit_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:background="?android:selectableItemBackground"
                    android:clickable="true"
...
